# PrivTI

./: .gitignore  .gitmodules  README.md
Athos/: README.md
Athos/ONNXCompiler/: ONNXNodesAST.py
SCI/: CMakeLists.txt
SCI/cmake/: SCIConfig.cmake
SCI/src/FloatingPoint/: fixed-point.cpp  fixed-point.h  fp-math.cpp  fp-math.h
SCI/tests/: CMakeLists.txt
SCI/tests/activation/: bolt_gelu.cpp  bolt_softmax.cpp  iron_gelu.cpp  iron_layer_norm.cpp  iron_softmax.cpp
SCI/tests/bert_bolt/: CMakeLists.txt  bert.cpp  bolt_bert.cpp  bolt_cp.cpp  linear.cpp
SCI/tests/bert_iron/: bert.cpp  he.cpp  iron_bert.cpp  linear.cpp
SCI/tests/mpc/: CMakeLists.txt  test-gelu.cpp  test-lut.cpp  test-rms.cpp  test-silu.cpp  test-softmax.cpp
SCI/tests/we/: CMakeLists.txt  boltgelu-we.cpp  boltlayernorm-we.cpp  boltsoftmax-we.cpp  nolinear_we.txt  testsoftmax-we.cpp
results/no_pruning/: mrpc.txt  rte.txt  sst-2.txt  sts-b.txt
results/pruning/: mrpc.txt  rte.txt  sst-2.txt  sts-b.txt
